Vending Machine RTOS Fix
코드 일부 수정
- Motor_Task 삭제
- 메세지큐 삭제

--- a/In_Progress/Vending_Machine/Vending_Machine.ioc
+++ b/In_Progress/Vending_Machine/Vending_Machine.ioc
@@ -3,9 +3,8 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
-FREERTOS.Queues01=msgQueue,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=IR_Task,0,128,IR_Task_Function,Default,NULL,Dynamic,NULL,NULL;UART_Task,0,128,UART_Task_Function,Default,NULL,Dynamic,NULL,NULL;Motor_Task,0,128,Motor_Task_Function,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
+FREERTOS.Tasks01=IR_Task,0,128,IR_Task_Function,Default,NULL,Dynamic,NULL,NULL;UART_Task,0,128,UART_Task_Function,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
