--- a/In_Progress/Vending_Machine/Vending_Machine.ioc
+++ b/In_Progress/Vending_Machine/Vending_Machine.ioc
@@ -1,10 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
-FREERTOS.Tasks01=IR_Task,0,128,IR_Task_Function,Default,NULL,Dynamic,NULL,NULL;UART_Task,0,128,UART_Task_Function,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,Queues01
+FREERTOS.Queues01=msgQueue,16,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=UART_Task,0,128,UART_Task_Func,Default,NULL,Dynamic,NULL,NULL;IR_Task,0,128,IR_Task_Func,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
@@ -19,32 +20,33 @@ Mcu.IP5=USART6
 Mcu.IPNb=6
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB2
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PC6
-Mcu.Pin19=PC7
-Mcu.Pin2=PH0 - OSC_IN
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PB3
-Mcu.Pin23=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin24=VP_SYS_VS_tim2
-Mcu.Pin3=PH1 - OSC_OUT
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
-Mcu.PinsNb=25
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PB2
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PB15
+Mcu.Pin19=PC6
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PC7
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB3
+Mcu.Pin24=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin25=VP_SYS_VS_tim3
+Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin4=PH1 - OSC_OUT
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -63,9 +65,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
-NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM2_IRQn
-NVIC.TimeBaseIP=TIM2
+NVIC.TIM3_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM3_IRQn
+NVIC.TimeBaseIP=TIM3
 NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 PA0-WKUP.Locked=true
@@ -82,9 +84,13 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=USART_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
@@ -112,23 +118,26 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
+PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC6.Locked=true
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
-PC7.Locked=true
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
 PH0\ -\ OSC_IN.Locked=true
-PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
+PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Locked=true
-PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
+PH1\ -\ OSC_OUT.Mode=HSE-External-Clock-Source
 PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -151,8 +160,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=final_test_RTOS.ioc
-ProjectManager.ProjectName=final_test_RTOS
+ProjectManager.ProjectFileName=final_test_BT.ioc
+ProjectManager.ProjectName=final_test_BT
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -162,48 +171,49 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART6_UART_Init-USART6-false-HAL-true
-RCC.48MHZClocksFreq_Value=50000000
-RCC.AHBFreq_Value=100000000
+RCC.48MHZClocksFreq_Value=84000000
+RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=50000000
-RCC.APB1TimFreq_Value=100000000
-RCC.APB2Freq_Value=100000000
-RCC.APB2TimFreq_Value=100000000
-RCC.CortexFreq_Value=100000000
-RCC.EthernetFreq_Value=100000000
-RCC.FCLKCortexFreq_Value=100000000
-RCC.FLatency-AdvancedSettings=FLASH_LATENCY_3
+RCC.APB1Freq_Value=42000000
+RCC.APB1TimFreq_Value=84000000
+RCC.APB2Freq_Value=84000000
+RCC.APB2TimFreq_Value=84000000
+RCC.CortexFreq_Value=84000000
+RCC.EthernetFreq_Value=84000000
+RCC.FCLKCortexFreq_Value=84000000
+RCC.FLatency-AdvancedSettings=FLASH_LATENCY_2
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=100000000
+RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=48000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLN,PLLP,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=100000000
-RCC.PLLCLKFreq_Value=100000000
-RCC.PLLM=4
-RCC.PLLN=100
-RCC.PLLQCLKFreq_Value=50000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.MCO2PinFreq_Value=84000000
+RCC.PLLCLKFreq_Value=84000000
+RCC.PLLN=336
+RCC.PLLP=RCC_PLLP_DIV4
+RCC.PLLQCLKFreq_Value=84000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=100000000
+RCC.SYSCLKFreq_VALUE=84000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=96000000
-RCC.VCOInputFreq_Value=2000000
-RCC.VCOInputMFreq_Value=500000
-RCC.VCOOutputFreq_Value=200000000
-RCC.VcooutputI2S=48000000
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
+RCC.VCOInputMFreq_Value=1000000
+RCC.VCOOutputFreq_Value=336000000
+RCC.VcooutputI2S=96000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART6.BaudRate=115200
+USART6.BaudRate=9600
 USART6.IPParameters=VirtualMode,BaudRate
 USART6.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_SYS_VS_tim2.Mode=TIM2
-VP_SYS_VS_tim2.Signal=SYS_VS_tim2
+VP_SYS_VS_tim3.Mode=TIM3
+VP_SYS_VS_tim3.Signal=SYS_VS_tim3
 board=NUCLEO-F411RE
 boardIOC=true
 rtos.0.ip=FREERTOS
