Vending Machine IR_Task Fix
우선순위 충돌로 인해 모터값을 UART로 받은 이후 센서값을 받지 못하는 문제 해결

--- a/In_Progress/Vending_Machine/Vending_Machine.ioc
+++ b/In_Progress/Vending_Machine/Vending_Machine.ioc
@@ -3,9 +3,8 @@ CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,Queues01
-FREERTOS.Queues01=msgQueue,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=UART_Task,0,128,UART_Task_Func,Default,NULL,Dynamic,NULL,NULL;IR_Task,0,128,IR_Task_Func,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
+FREERTOS.Tasks01=UART_Task,0,128,UART_Task_Func,Default,NULL,Dynamic,NULL,NULL;IR_Task,2,128,IR_Task_Func,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
@@ -160,8 +159,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=final_test_BT.ioc
-ProjectManager.ProjectName=final_test_BT
+ProjectManager.ProjectFileName=Vending_Machine.ioc
+ProjectManager.ProjectName=Vending_Machine
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
