Vending Machine Config Fix
1. 송신,수신 버퍼를 동적으로 할당해서 스택 메모리 확보
2. ioc에서 RTOS의 Config를 수정해서 code generation시 오류가 발생하지 않도록 설정

--- a/In_Progress/Vending_Machine/Vending_Machine.ioc
+++ b/In_Progress/Vending_Machine/Vending_Machine.ioc
@@ -3,8 +3,10 @@ CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
-FREERTOS.Tasks01=UART_Task,0,128,UART_Task_Func,Default,NULL,Dynamic,NULL,NULL;IR_Task,2,128,IR_Task_Func,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.INCLUDE_uxTaskGetStackHighWaterMark=1
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,INCLUDE_uxTaskGetStackHighWaterMark,configCHECK_FOR_STACK_OVERFLOW
+FREERTOS.Tasks01=UART_Task,0,256,UART_Task_Func,Default,NULL,Dynamic,NULL,NULL;IR_Task,2,256,IR_Task_Func,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
